# barcalc

./: LICENSE  README.md  flake.nix  meson.build
nix/: default.nix  overlays.nix
resources/: meson.build  style.css
src/: entry.cpp  entry.hpp  eval.cpp  eval.hpp  history.cpp  history.hpp  main.cpp  meson.build  numpad.cpp  numpad.hpp  symbols.hpp  utils.hpp  window.cpp  window.hpp
